# progressly

./: Dockerfile  README.md
.github/workflows/: main.yaml  pull_requests.yaml  release.yaml
backend/: Cargo.toml
backend/migrations/2023-02-05-121908_create_users/: up.sql
backend/migrations/2023-02-05-122147_create_projects/: up.sql
backend/migrations/2023-02-05-122409_create_tasks/: up.sql
backend/migrations/2023-02-05-122414_create_trackings/: down.sql  up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs
backend/src/models/: mod.rs  projects.rs  trackings.rs
backend/src/routes/: mod.rs  projects.rs  trackings.rs
frontend/: Cargo.toml  index.html  index.scss  manifest.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  api.rs  home.rs  main.rs  projects.rs
