[package]
name = "progressly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.0", features = ["serde", "v4"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "extras"] }
dotenvy = "0.15"
time = { version = "0.3.17", features = ["serde"] }
remove_dir_all = "0.8.1"
