[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
log = "0.4.6"
wasm-logger = "0.2.0"
serde = "1.0.140"
reqwasm = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
gloo = "0.8.0"
remove_dir_all = "0.8.1"
